# SQL-Query-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
sql_query_agent/: __init__.py  agent.py  cli.py  db.py  planner.py  sample_data.py  web_ui.py
sql_query_agent/static/: app.js  index.html  styles.css
tests/: test_agent_results.py  test_cli.py  test_config.py  test_db.py  test_langsmith_config.py  test_memory.py  test_planner.py  test_schema.py  test_web_ui.py
