[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-query-agent"
version = "0.1.0"
description = "A minimal CLI LangGraph agent for answering questions over SQLite data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-openai",
    "langsmith",
    "python-dotenv",
    "sqlglot",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
sql-agent = "sql_query_agent.cli:main"

[tool.setuptools.packages.find]
include = ["sql_query_agent*"]

[tool.setuptools.package-data]
sql_query_agent = [
    "static/*.html",
    "static/*.css",
    "static/*.js",
    "static/vendor/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp"
